--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <button class="tab-btn" data-tab="tab-monthly" type="button">월별 수익률</button>
     <button class="tab-btn" data-tab="tab-sync" type="button">구글시트 연동</button>
     <button class="tab-btn" data-tab="tab-updates" type="button">업데이트</button>
+    <button class="tab-btn" data-tab="tab-qa" type="button">Q&amp;A</button>
   </nav>
 </header>
 
@@ -449,6 +450,38 @@
           <tr>
             <th style="min-width:120px;">날짜</th>
             <th>업데이트 내용</th>
+            <th style="width:84px;">삭제</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </section>
+
+  <!-- 6) Q&A (로컬 저장) -->
+  <section class="card tab-page" id="tab-qa">
+    <div class="row" style="align-items:flex-end;">
+      <div style="flex:1;">
+        <h2 style="margin:0;">Q&amp;A</h2>
+        <p class="note" style="margin-top:6px;">요청사항/오류 문의를 기록하고, 답글을 달아 관리하는 탭이에요. (이 기기/브라우저에만 저장)</p>
+      </div>
+      <div>
+        <label for="qaDate"><b>날짜</b></label>
+        <input id="qaDate" type="date"/>
+      </div>
+      <div>
+        <button class="btn" id="addQaBtn" type="button">행 추가</button>
+      </div>
+    </div>
+
+    <div style="margin-top:12px; overflow:auto;">
+      <table class="table" id="qaTable">
+        <thead>
+          <tr>
+            <th style="min-width:110px;">날짜</th>
+            <th style="min-width:84px;">해결</th>
+            <th>문의</th>
+            <th>답글</th>
             <th style="width:84px;">삭제</th>
           </tr>
         </thead>
